--- a/styles/components/skins.scss
+++ b/styles/components/skins.scss
@@ -4,14 +4,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 90vh;
+  min-height: 60vh;
+  margin-bottom: 120px;
 
   @include below($sm) {
-    min-height: 70vh;
+    // min-height: 70vh;
+    margin-bottom: 90px;
   }
 
   &-container {
     flex: 1;
+    margin-top: 100px;
     min-width: 0;
   }
 
